# q-link

./: .clang-format  .codetogether.ignore  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  qlink.cpp
cmake/: Widget.cmake
include/link_link/: link_link.h  operation.h  reaction.h
include/link_link/block/: blank.h  block.h  block_interface.h  diamond.h  path.h  player.h  special.h  type.h  wall.h
include/widgets/: game.h  main_window.h  menu.h
src/: CMakeLists.txt
src/include/link_link/: link_link.h  reaction.h
src/include/link_link/block/: block.h  diamond.h  player.h  special.h  type.h  wall.h
src/include/widget/: main_window.h
src/link_link/: CMakeLists.txt  link_link.cpp
src/link_link/block/: blank.cpp  diamond.cpp  path.cpp  player.cpp  special.cpp  type.cpp  wall.cpp
src/widget/: CMakeLists.txt
src/widget/game/: CMakeLists.txt  game.cpp  game.ui
src/widget/main_window/: CMakeLists.txt  main_window.cpp
src/widget/menu/: CMakeLists.txt  menu.cpp
src/widgets/: CMakeLists.txt
src/widgets/game/: CMakeLists.txt  game.cpp  game.ui
src/widgets/main_window/: CMakeLists.txt  main_window.cpp  main_window.ui
src/widgets/menu/: CMakeLists.txt  menu.cpp  menu.ui
test/: CMakeLists.txt
test/include/test_link_link/: game_logic.h
test/link_link/: CMakeLists.txt  game_logic.cpp
